# sps-template-server/docs/swagger.yaml
@@ -17,6 +17,38 @@ definitions:
       url:
         type: string
     type: object
+  model.SignatureRecord:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      signatures:
+        items:
+          $ref: '#/definitions/model.SignatureUse'
+        type: array
+      updatedAt:
+        type: string
+    type: object
+  model.SignatureUse:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      signature:
+        $ref: '#/definitions/model.SysSignature'
+      signatureId:
+        type: integer
+      signatureRecordID:
+        type: integer
+      updatedAt:
+        type: string
+      x:
+        type: integer
+      "y":
+        type: integer
+    type: object
   model.SysApi:
     properties:
       apiGroup:
@@ -348,7 +380,7 @@ definitions:
   request.ChangeSignaturePasswordStruct:
     properties:
       id:
-        type: string
+        type: number
       newPassword:
         type: string
       password:
@@ -427,6 +459,20 @@ definitions:
       authorityId:
         type: string
       uuid:
+        type: string
+    type: object
+  request.UseSignatureStruct:
+    properties:
+      recordId:
+        type: number
+      signatureId:
+        type: number
+    type: object
+  request.ValidateSignatureStruct:
+    properties:
+      id:
+        type: number
+      password:
         type: string
     type: object
   request.WorkflowProcessSearch:
@@ -1089,27 +1135,27 @@ paths:
       summary: 更新菜单
       tags:
       - Menu
-  /signature/GetSignatureById:
+  /signature/cancelSignature:
     post:
       consumes:
       - application/json
       parameters:
-      - description: 根据id获取签章
+      - description: 取消签章
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/request.GetById'
+          $ref: '#/definitions/model.SignatureUse'
       produces:
       - application/json
       responses:
         "200":
-          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          description: '{"success":true,"data":{},"msg":"验证成功"}'
           schema:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: 根据id获取签章
+      summary: 取消签章
       tags:
       - SysSignature
   /signature/changePassword:
@@ -1179,6 +1225,29 @@ paths:
       summary: 删除签章
       tags:
       - SysSignature
+  /signature/getSignatureById:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 根据id获取签章
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.GetById'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 根据id获取签章
+      tags:
+      - SysSignature
   /signature/getSignatureList:
     post:
       consumes:
@@ -1202,6 +1271,52 @@ paths:
       summary: 分页获取签章列表
       tags:
       - SysSignature
+  /signature/getSignatureRecordById:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 根据id获取签章记录
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.GetById'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 根据id获取签章记录
+      tags:
+      - SysSignature
+  /signature/saveSignaturePosition:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 保存签章位置
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.SignatureRecord'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"验证成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 保存签章位置
+      tags:
+      - SysSignature
   /signature/updateSignature:
     put:
       consumes:
@@ -1223,6 +1338,52 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 更新签章
+      tags:
+      - SysSignature
+  /signature/useSignature:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 使用签章
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UseSignatureStruct'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"验证成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 使用签章
+      tags:
+      - SysSignature
+  /signature/validateSignature:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 验证签章信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.ValidateSignatureStruct'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"验证成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 验证签章信息
       tags:
       - SysSignature
   /user/deleteUser:
