# sps-template-server/model/response/sys_signature.go
@@ -1,0 +1,8 @@
+package response
+
+import "sps-template-server/model"
+
+type SignatureRecordResponse struct {
+	Record		model.SignatureRecord	`json:"record"`
+	Signature	model.SignatureUse		`json:"signature"`
+} 
