# sps-template-server/service/sys_signature.go
@@ -41,7 +41,7 @@ func GetSignatureList(info request.PageInfo) (err error, list interface{}, total
 //@function: FindSignatureById
 //@description: 通过id获取签章信息
 //@param: id float64
-//@return: err error, user *model.SysSignature
+//@return: err error, signature *model.SysSignature
 
 func FindSignatureById(id float64) (err error, signature *model.SysSignature) {
 	var s model.SysSignature
@@ -92,4 +92,127 @@ func DeleteSignature (id float64) (err error)  {
 	return err
 }
 
+//@function: GetSignatureRecordList
+//@description: 分页获取数据
+//@param: info request.SearchSignatureParams
+//@return: err error, list interface{}, total int64
 
+func GetSignatureRecordList(info request.SearchSignatureParams) (err error, list interface{}, total int64) {
+	limit := info.PageSize
+	offset := info.PageSize * (info.Page - 1)
+	db := global.SdDB.Model(&model.SignatureRecord{})
+	var signatureRecordList []model.SignatureRecord
+	if info.Id != 0 {
+		db = db.Where("id = ?", info.Id)
+	}
+	err = db.Count(&total).Error
+	err = db.Limit(limit).Offset(offset).Preload("SignatureUses").Preload("SignatureUses.SignatureBase").Preload("SignatureUses.Operator").Find(&signatureRecordList).Error
+	return err, signatureRecordList, total
+}
+
+//@function: ValidateSignature
+//@description: 验证签章密码
+//@param: id float64, password string
+//@return: err error
+
+func ValidateSignature(id float64, password string) (err error) {
+	var s model.SysSignature
+	if errors.Is(global.SdDB.Where("id = ? AND password = ?", id, utils.MD5V([]byte(password))).First(&s).Error, gorm.ErrRecordNotFound) {
+		return errors.New("签章密码错误")
+	}
+	return err
+}
+
+//@function: UseSignature
+//@description: 根据id获取签章记录
+//@param: recordId float64
+//@return: err error, record model.SignatureRecord
+func GetSignatureRecordById(id float64) (err error, record model.SignatureRecord) {
+	err = global.SdDB.Preload("SignatureUses").Preload("SignatureUses.SignatureBase").Where("id = ?", id).First(&record).Error
+	return
+}
+
+//@function: UseSignature
+//@description: 使用签章
+//@param: recordId float64, signatureId float64
+//@return: err error, record model.SignatureRecord, signatureUse model.SignatureUse
+
+func UseSignature(recordId float64, signatureId float64, userId uint, description string) (err error, record model.SignatureRecord, signatureUse model.SignatureUse) {
+	err = global.SdDB.Transaction(func(tx *gorm.DB) error {
+		if recordId == 0 {
+			err, record = CreateSignatureRecord(tx)
+			if err != nil {
+				return err
+			}
+		} else {
+			if err = tx.Where("id = ?", recordId).First(&record).Error; err != nil {
+				return err
+			}
+		}
+		var signature model.SysSignature
+		if err = tx.Where("id = ?", signatureId).First(&signature).Error; err != nil {
+			return errors.New("签章不存在")
+		}
+		s := model.SignatureUse{
+			SignatureId: signature.ID,
+			SignatureRecordID: record.ID,
+			OperatorID: userId,
+			Description: description,
+		}
+		if err = tx.Create(&s).Error; err != nil {
+			return err
+		}
+		err = tx.Preload("SignatureUses").Preload("SignatureUses.SignatureBase").Where("id = ?", record.ID).First(&record).Error
+		return err
+	})
+	return err, record, signatureUse
+}
+
+//@function: SaveSignaturePosition
+//@description: 保存签章位置
+//@param: recordId float64, signatureId float64
+//@return: err error, record model.SignatureRecord
+
+func SaveSignaturePosition(record model.SignatureRecord) (err error) {
+	return global.SdDB.Transaction(func(tx *gorm.DB) error {
+		//var signatures []model.SignatureUse
+		var txErr error
+		//if txErr = tx.Where("signature_record_id = ?", record.ID).Find(&signatures).Error; txErr != nil {
+		//	return txErr
+		//}
+		signatures := record.SignatureUses
+		if len(signatures) == 0{
+			return nil
+		}
+		for _, signature := range signatures {
+			if txErr = tx.Save(&signature).Error; txErr != nil {
+				return txErr
+			}
+		}
+		return nil
+	})
+}
+
+//@function: SaveSignaturePosition
+//@description: 取消签章
+//@param: recordId float64
+//@return: err error
+
+func CancelSignature(signature model.SignatureUse) (err error, record model.SignatureRecord) {
+	recordId := signature.SignatureRecordID
+	if err = global.SdDB.Delete(&signature).Error; err != nil {
+		return
+	}
+	err = global.SdDB.Preload("SignatureUses").Preload("SignatureUses.SignatureBase").Where("id = ?", recordId).First(&record).Error
+	return
+}
+
+
+//@function: CreateSignatureRecord
+//@description: 创建签章记录
+//@return: err error, record model.SignatureRecord
+
+func CreateSignatureRecord(tx *gorm.DB) (err error, record model.SignatureRecord) {
+	err = tx.Create(&record).Error
+	return
+}
